--- a/admin/index.html
+++ b/admin/index.html
@@ -5,9 +5,9 @@
         <link rel="icon" href="/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta name="description" content="Boilerplate for React TypeScript Apps" />
+        <meta name="description" content="Admin panel for TurboFlop" />
         <link rel="manifest" href="/manifest.json" />
-        <title>React TypeScript Boilerplate</title>
+        <title>TurboFlop Admin</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
